ansible/roles/frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
  namespace: webapp
  labels:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
spec:
  ports:
    - name: http
      port: 8002
  selector:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-gunicorn
  namespace: webapp
  labels:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
spec:
  ports:
    - name: gunicorn
      port: 8000
  selector:
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
