ansible/roles/frontend/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress-tls
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`reduce.isis.cclrc.ac.uk`)
      kind: Rule
      middlewares:
        - name: frontend-hurricane-linkerd-middleware
      services:
        - name: frontend-hurricane
          port: 8000
  tls:
    secretName: ssl-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingress-static-tls
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`reduce.isis.cclrc.ac.uk`) && PathPrefix(`/static`)
      kind: Rule
      middlewares:
        - name: frontend-nginx-linkerd-middleware
      services:
        - name: frontend-nginx
          port: 8002
  tls:
    secretName: ssl-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: frontend-hurricane-linkerd-middleware
  namespace: webapp
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "frontend-hurricane.webapp.svc.cluster.local:8000"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: frontend-nginx-linkerd-middleware
  namespace: webapp
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "frontend-nginx.webapp.svc.cluster.local:8002"
